# skogatt.org

./: '  .dockerignore  Dockerfile  README.md  makefile
env_setting/: nginx.conf  run-server.sh
pages/: package.json
pages/public/: index.html  manifest.json
pages/server/: Cargo.toml
pages/server/src/: main.rs
pages/src/: App.css  App.js  App.scss  index.scss  util.scss  variables.scss
pages/src/components/: App.js  App.module.scss  Button.js  Button.module.scss  ButtonsGroup.js  ButtonsGroup.module.scss  Comment.js  Comment.module.scss  DislikeButton.js  LikeButton.js  Nav.js  Nav.module.scss  Pagination.js  Pagination.module.scss  Textbox.js  Textbox.module.scss
server/: Cargo.toml  makefile
server/src/: data.json  database.rs  lib.rs  main.rs
server/src/home/: comments.rs  like.rs  mod.rs
