[package]
name = "peterlits-com-server"
version = "0.1.0"
authors = ["Peterlits Zo <peterlitszo@outlook.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19" }
env_logger = { version = "0.8.3" }
hyper = { version = "0.14", features = ["full"] }
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
rusqlite = { version = "0.25.3" }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0.59" }
tokio = { version = "1", features = ["full"] }
url = { version = "2.2.2" }

[dev-dependencies]
actix-rt = { version = "2.2.0" }
once_cell = { version = "1.8.0" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.5.4" }
